# packetutil

./: .gitignore  README.md  pyproject.toml
src/packetutil/: __init__.py  bit_field.py  bytearray_field.py  packet_field.py  packet_formatter.py  type_field.py
tests/: test_bit_field.py  test_bytearray_field.py  test_packet_formatter.py  test_type_field.py
